<resources>
    <string name="app_name">Vicinity</string>
    <string name="action_new_model">New model</string>
    <string name="action_gallery">Gallery</string>
    <string name="action_settings">Settings</string>
    <string name="action_switch_layout">Switch Layout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="menu_fragment_label">Vicinity</string>
    <string name="new_model_fragment_label">New model Fragment</string>
    <string name="gallery_fragment_label">Gallery Fragment</string>
    <string name="settings_fragment_label">Settings Fragment</string>
    <string name="camera_fragment_label">Camera Fragment</string>
    <string name="photo_gallery_fragment_label">Gallery Fragment</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="new_model_name_default">NewModel1</string>
    <string name="new_model_name">Model name: %1$s</string>
    <string name="new_model_name_error">ERROR: Model name [%1$s] is not valid</string>

    <string name="settings_greeting">This app is perfect. You don`t need any settings.</string>

    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_model">Delete %1$s model?</string>
    <string name="delete_title">Confirm</string>

    <string name="look_up_words">Show Stored Words</string>

    <string name="read_permission_failed">Please allow read permission to open model files.</string>
    <string name="open_model">Open model…</string>
    <string name="open_model_success">Model loaded successfully.</string>
    <string name="open_model_error">Failed to load model: %s</string>
</resources>