<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".NewModelFragment">


    <TextView
        android:id="@+id/newModelName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:paddingHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:background="@color/coal"
        android:text="@string/new_model_name"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNewModelName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:paddingHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:background="@color/coal"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/new_model_name_default"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newModelName" />

    <TextView
        android:id="@+id/newModelInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@color/coal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="20dp"
        android:text="@string/new_model_name_error"
        android:visibility="invisible"
        android:textColor="@color/error"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNewModelName" />

    <Button
        android:id="@+id/buttonNewModelPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonNewModelNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>