<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/permissions_fragment">

    <fragment
        android:id="@+id/permissions_fragment"
        android:name="com.lada.vicinity.fragments.PermissionsFragment"
        android:label="PermissionsFragment">

        <action
            android:id="@+id/action_permissions_to_main"
            app:destination="@id/MenuFragment"
            app:popUpTo="@id/permissions_fragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/MenuFragment"
        android:name="com.lada.vicinity.fragments.MenuFragment"
        android:label="@string/menu_fragment_label"
        tools:layout="@layout/fragment_menu">

        <action
            android:id="@+id/action_MenuFragment_to_NewModelFragment"
            app:destination="@id/NewModelFragment" />
        <action
            android:id="@+id/action_MenuFragment_to_GalleryFragment"
            app:destination="@id/GalleryFragment" />
        <action
            android:id="@+id/action_MenuFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/NewModelFragment"
        android:name="com.lada.vicinity.fragments.NewModelFragment"
        android:label="@string/new_model_fragment_label"
        tools:layout="@layout/fragment_new_model">

        <action
            android:id="@+id/action_NewModelFragment_to_MenuFragment"
            app:destination="@id/MenuFragment" />
        <action
            android:id="@+id/action_NewModelFragment_to_CameraFragment"
            app:destination="@id/CameraFragment"/>
    </fragment>

    <fragment
        android:id="@+id/GalleryFragment"
        android:name="com.lada.vicinity.fragments.GalleryFragment"
        android:label="@string/gallery_fragment_label"
        tools:layout="@layout/fragment_gallery">

        <action
            android:id="@+id/action_GalleryFragment_to_MenuFragment"
            app:destination="@id/MenuFragment" />
    </fragment>

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.lada.vicinity.fragments.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/action_SettingsFragment_to_MenuFragment"
            app:destination="@id/MenuFragment" />
    </fragment>

    <fragment
        android:id="@+id/CameraFragment"
        android:name="com.lada.vicinity.fragments.CameraFragment"
        android:label="@string/camera_fragment_label"
        tools:layout="@layout/fragment_camera">

        <action
            android:id="@+id/action_CameraFragment_to_MenuFragment"
            app:destination="@id/MenuFragment" />
        <argument
            android:name="model"
            app:argType="com.lada.vicinity.utils.Model" />
    </fragment>

</navigation>