<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MenuFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:weightSum="1">

                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="4dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_launcher_foreground" />

                    <Button
                        android:id="@+id/button_new_model"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/cyan"
                        android:gravity="center|bottom"
                        android:paddingBottom="36dp"
                        android:singleLine="false"
                        android:text="@string/app_name"
                        android:textSize="18sp" />


                </RelativeLayout>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/button_gallery"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/cyan"
                        android:gravity="center|bottom"
                        android:paddingBottom="18dp"
                        android:text="@string/action_gallery"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_launcher_background" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/button_settings"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/cyan"
                        android:gravity="center|bottom"
                        android:paddingBottom="18dp"
                        android:text="@string/action_settings"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_launcher_foreground" />
                </RelativeLayout>
            </TableRow>

        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>